--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "express": "^4.17.1",
     "jsonfile": "^6.0.1",
     "pg": "^8.2.1",
-    "postgres": "^1.0.2"
+    "postgres": "^1.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
