--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonfile": "^6.0.1",
     "pg": "^8.2.1",
     "postgres": "^1.0.2",
+    "react": "^16.13.1",
     "react-router-dom": "^5.2.0"
   }
 }
