--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.2.1",
     "postgres": "^1.0.2",
     "react": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "sequelize": "^5.21.10"
   }
 }
