--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "admin": "^1.4.1",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.23.3",
+    "http-errors": "^1.8.0",
     "jsonfile": "^6.0.1",
+    "morgan": "^1.10.0",
     "pg": "^8.2.1",
     "postgres": "^1.0.2",
     "react": "^16.13.1",
